# diff-surfel-rasterization

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  PROJECT  README.md  ext.cpp  setup.py
python/: __init__.py.in
